# Base

./: .gitignore  .travis.yml  Array.hpp  Assert.hpp  Base.hpp  Blob.cpp  Blob.hpp  CMakeLists.txt  Date.cpp  Date.hpp  Debugger.cpp  Debugger.hpp  Describe.hpp  Exception.cpp  Exception.hpp  File.cpp  File.hpp  Flags.hpp  GeneratedObjectCode.hpp  LICENSE  LruCache.hpp  Map.hpp  MutableArray.hpp  MutableBlob.cpp  MutableBlob.hpp  MutableMap.hpp  MutableSet.hpp  MutableString.cpp  MutableString.hpp  Object.cpp  Object.hpp  Platform.cpp  Platform.hpp  Pointer.hpp  README.markdown  README.md  ReadMe.md  SeratoDB.podspec  Set.hpp  String.cpp  (+7 more)
Base/: Array.cpp  Array.hpp  ArrayContainer.cpp  ArrayContainer.hpp  Assert.hpp  Base.hpp  Blob.cpp  Blob.hpp  ConstArray.hpp  ConstMap.hpp  ConstPointer.hpp  Date.cpp  Date.hpp  Debugger.cpp  Debugger.hpp  Exception.hpp  File.cpp  File.hpp  GeneratedObjectCode.hpp  Map.hpp  Namespace.hpp  NullablePointer.hpp  Object.cpp  Object.hpp  Platform.cpp  Platform.hpp  Pointer.hpp  String.cpp  String.hpp  Test.hpp  Types.hpp  Uncopyable.hpp  WeakConstPointer.hpp  WeakPointer.hpp
Base/Internal/: Blob.cpp  Blob.hpp  InternalObject.cpp  InternalObject.hpp  Object.cpp  Object.hpp  String.cpp  String.hpp
Base/Tests/: Array.cpp  ArrayContainer.cpp  Blob.cpp  Map.cpp  String.cpp  Tests.hpp
Collection/: Artist.cpp  Artist.hpp  Collection.hpp
Collection/Internal/: Artist.cpp  Artist.hpp
Documentation/: Coding Standards.md  Getting Started.md  Serato External Metadata Specification v1.0.docx
Internal/: Array.cpp  Array.hpp  Blob.cpp  Blob.hpp  Map.hpp  MutableArray.cpp  MutableArray.hpp  MutableBlob.cpp  MutableBlob.hpp  MutableMap.hpp  MutableSet.hpp  MutableString.cpp  MutableString.hpp  Object.hpp  String.cpp  String.hpp  decimal.h
OS X/Rekord Buddy/: AboutWindow.xib  BetaWarningWindow.xib  CollectionInitWindow.xib  MainMenu.xib  MainWindow.xib  NxAAppDelegate.h  NxAAppDelegate.mm  NxAAppProtection.h  Rekord Buddy Beta-Info.plist  Rekord Buddy-Info.plist  Rekord Buddy-Prefix.pch  SplashWindow.xib  main.m
OS X/Rekord Buddy Tests/: NxATestCase.h  NxATestCase.mm  Rekord Buddy Tests-Info.plist
OS X/Rekord Buddy.xcodeproj/: project.pbxproj
OS X/Rekord Buddy.xcworkspace/: contents.xcworkspacedata
OS X/RekordBuddyCryptor/: NxACrytorAppDelegate.h  NxACrytorAppDelegate.m  RekordBuddyCryptor-Info.plist  main.m
Persistence/: ObjectID.cpp  ObjectID.hpp  Persistence.hpp  PersistentContext.cpp  PersistentContext.hpp  PersistentObject.cpp  PersistentObject.hpp  PersistentObjectSchema.cpp  PersistentObjectSchema.hpp  PersistentStore.cpp  PersistentStore.hpp  Serializer.hpp
Persistence/Internal/: PersistentContext.cpp  PersistentContext.hpp  PersistentObject.cpp  PersistentObject.hpp  PersistentObjectSchema.cpp  PersistentObjectSchema.hpp  PersistentStore.cpp  PersistentStore.hpp  SQLiteSerializers.cpp  SQLiteSerializers.hpp
SeratoDB/: AIFFTrackFile.hpp  AiffTrackFile.cpp  Base64.cpp  Base64.hpp  BlobTag.cpp  BlobTag.hpp  BooleanTag.cpp  BooleanTag.hpp  Crate.cpp  Crate.hpp  CrateOrderFile.cpp  CrateOrderFile.hpp  CueMarker.cpp  CueMarker.hpp  Database.cpp  Database.hpp  DatabaseSet.cpp  DatabaseSet.hpp  DbUtility.cpp  DbUtility.hpp  DebugFlags.hpp  Exceptions.hpp  FLACTrackFile.cpp  FLACTrackFile.hpp  GridMarker.cpp  GridMarker.hpp  ID3TrackFile.cpp  ID3TrackFile.hpp  LoopMarker.cpp  LoopMarker.hpp  MP4TrackFile.cpp  MP4TrackFile.hpp  MPEGTrackFile.cpp  MPEGTrackFile.hpp  NxASeratoAIFFTrackFile.cpp  NxASeratoAIFFTrackFile.h  NxASeratoBase64.cpp  NxASeratoBase64.h  NxASeratoBlobTag.cpp  NxASeratoBlobTag.h  (+156 more)
SeratoDB.xcodeproj/: project.pbxproj
Tests/: Array.cpp  Blob.cpp  CMakeLists.txt  File.cpp  Flags.cpp  Map.cpp  Set.cpp  String.cpp  Tests.hpp
cmake/: make_vs_sln.bat  make_xcodeproj
(+762 files in other folders)
